[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-Levenshtein"
version = "0.27.1"
dependencies = [
  "Levenshtein==0.27.1"
]
requires-python = ">= 3.9"
authors = [
  {name = "Max Bachmann", email = "pypi@maxbachmann.de"},
]
description = "Python extension for computing string edit distances and similarities."
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = ["string", "Levenshtein", "comparison", "edit-distance"]

[project.urls]
Homepage = "https://github.com/rapidfuzz/python-Levenshtein"
Documentation = "https://rapidfuzz.github.io/Levenshtein/"
Repository = "https://github.com/rapidfuzz/python-Levenshtein.git"
Issues = "https://github.com/rapidfuzz/python-Levenshtein/issues"
Changelog = "https://github.com/rapidfuzz/python-Levenshtein/blob/main/CHANGELOG.rst"
