[metadata]
name = python-Levenshtein
version = 0.24.0
description = Python extension for computing string edit distances and similarities.
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Bachmann
author_email = pypi@maxbachmann.de
url = https://github.com/rapidfuzz/python-Levenshtein
license = GPL-2.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
keywords = string, Levenshtein, comparison, edit-distance

[options]
python_requires = >=3.8
install_requires =
    Levenshtein==0.24.0
